--- a/index.html
+++ b/index.html
@@ -11682,10 +11682,10 @@ footer a:hover, footer a:active, footer a:focus {
                                 휴클로가 제안하는 디지털 전환 솔루션의 기술력을 통해
                                 인간과 기술의 선순환이 이루어지고
                                 새로운 세상을 만들어갑니다.</p>
-                            <div class="d-flex flex-column flex-lg-row align-items-center">
+                            <!-- <div class="d-flex flex-column flex-lg-row align-items-center">
                                 <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><img class="app-badge" src="assets/img/google-play-badge.svg" alt="..." /></a>
                                 <a href="#!"><img class="app-badge" src="assets/img/app-store-badge.svg" alt="..." /></a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -11702,16 +11702,16 @@ footer a:hover, footer a:active, footer a:focus {
                             ><svg class="shape-1 d-none d-sm-block" viewBox="0 0 240.83 240.83" xmlns="http://www.w3.org/2000/svg">
                                 <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(120.42 -49.88) rotate(45)"></rect>
                                 <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(-49.88 120.42) rotate(-45)"></rect></svg
-                            ><svg class="shape-2 d-none d-sm-block" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><circle cx="50" cy="50" r="50"></circle></svg>
+                            <!-- ><svg class="shape-2 d-none d-sm-block" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><circle cx="50" cy="50" r="50"></circle></svg>
                             <div class="device-wrapper">
                                 <div class="device" data-device="iPhoneX" data-orientation="portrait" data-color="black">
-                                    <div class="screen bg-black">
+                                    <div class="screen bg-black"> -->
                                         <!-- PUT CONTENTS HERE:-->
                                         <!-- * * This can be a video, image, or just about anything else.-->
                                         <!-- * * Set the max width of your media to 100% and the height to-->
-                                        <!-- * * 100% like the demo example below.-->
+                                        <!-- * * 100% like the demo example below.
                                         <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="assets/img/demo-screen.mp4" type="video/mp4" /></video>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -11725,7 +11725,7 @@ footer a:hover, footer a:active, footer a:focus {
                 <div class="row gx-5 justify-content-center">
                     <div class="col-xl-8">
                         <div class="h2 fs-1 text-white mb-4">About Us</div>
-                        <img src="assets/img/logo.png" alt="..." style="height: 3rem" />
+                        <!-- <img src="assets/img/logo.png" alt=" 로고" style="height: 3rem" /> -->
                     </div>
                 </div>
             </div>
@@ -11834,7 +11834,7 @@ footer a:hover, footer a:active, footer a:focus {
             </div>
         </section>
         <!-- App badge section-->
-        <section class="bg-gradient-primary-to-secondary" id="download">
+        <!-- <section class="bg-gradient-primary-to-secondary" id="download">
             <div class="container px-5">
                 <h2 class="text-center text-white font-alt mb-4">Get the app now!</h2>
                 <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
@@ -11842,7 +11842,7 @@ footer a:hover, footer a:active, footer a:focus {
                     <a href="#!"><img class="app-badge" src="assets/img/app-store-badge.svg" alt="..." /></a>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Footer-->
         <footer class="bg-black text-center py-5">
             <div class="container px-5">
