--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="css/styles.css" rel="stylesheet" />
   <style>
-    
-
     @charset "UTF-8";
 
     /*!
@@ -12745,7 +12743,7 @@
     <div class="container px-5">
       <div class="row gx-5 justify-content-center">
         <div class="col-xl-8">
-          <div class="h2 fs-1 text-white mb-4">About Us</div>
+          <div class="h2 fs-1 text-white mb-4">3P Service</div>
           <!-- <h>주)제이솔루션은 ABC기술과 ICT 융합을 토대로 클라우드 SaaS기반 지능형 통합관제 플랫폼 서비스를 제공하고 있습니다. 급변하는 4차 산업혁명 시대 비대면, 무인화, 지능화 등 디지털 트랜스포메이션의 ICT 대전환을 위해 노력하고 있습니다.</h> -->
           <!-- <img src="assets/img/logo.png" alt=" 로고" style="height: 3rem" /> -->
           <div class="mycards">
@@ -12756,9 +12754,9 @@
                     src="https://media.istockphoto.com/id/1400359666/ko/%EC%82%AC%EC%A7%84/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC-%EB%B3%B4%EC%95%88-%EB%B3%B4%EC%95%88-%EB%B3%B4%EC%95%88-%EC%8B%9C%EC%8A%A4%ED%85%9C-%EA%B8%B0%EC%88%A0-%EA%B8%B0%EC%88%A0-%EC%95%88%EC%A0%84-%EB%B9%85-%EB%8D%B0%EC%9D%B4%ED%84%B0-%EC%95%94%ED%98%B8%ED%99%94-%EB%94%94%EC%A7%80%ED%84%B8-%EC%83%9D%EC%84%B1-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EB%B3%B4%ED%98%B8-%EA%B0%9C%EC%9D%B8-%EC%A0%95%EB%B3%B4-%EB%B3%B4%ED%98%B8-%EB%B8%94%EB%A1%9D-%EC%B2%B4%EC%9D%B8-%EC%BB%B4%ED%93%A8%ED%84%B0-%EC%97%B0%EA%B2%B0-%EC%9E%A0%EA%B8%88-%EC%BD%94%EB%94%A9-%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC-%EB%B3%B4%EC%95%88-%EA%B8%B0%EC%88%A0-%EB%B3%B4%EC%95%88-%EB%B3%B4%EC%95%88.jpg?b=1&s=170667a&w=0&k=20&c=eTOEiPyP7eyIItaEsTrv6Hx2zQfl0-DLrygrPl3ifmo="
                     class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">3P 서비스</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                      additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">지능형 최적물류관리 솔루션</h5>
+                    <p class="card-text"> SaaS 설계 및 API통신으로 다자간 One-stop 물류연동 체계를 구축하였으며, 알고리즘을 통한 최적거리 계산, FIFO로 재고관리
+                      효율성을 향상하였습니다.</p>
                   </div>
                 </div>
               </div>
@@ -12768,9 +12766,10 @@
                     src="https://media.istockphoto.com/id/1400359666/ko/%EC%82%AC%EC%A7%84/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC-%EB%B3%B4%EC%95%88-%EB%B3%B4%EC%95%88-%EB%B3%B4%EC%95%88-%EC%8B%9C%EC%8A%A4%ED%85%9C-%EA%B8%B0%EC%88%A0-%EA%B8%B0%EC%88%A0-%EC%95%88%EC%A0%84-%EB%B9%85-%EB%8D%B0%EC%9D%B4%ED%84%B0-%EC%95%94%ED%98%B8%ED%99%94-%EB%94%94%EC%A7%80%ED%84%B8-%EC%83%9D%EC%84%B1-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EB%B3%B4%ED%98%B8-%EA%B0%9C%EC%9D%B8-%EC%A0%95%EB%B3%B4-%EB%B3%B4%ED%98%B8-%EB%B8%94%EB%A1%9D-%EC%B2%B4%EC%9D%B8-%EC%BB%B4%ED%93%A8%ED%84%B0-%EC%97%B0%EA%B2%B0-%EC%9E%A0%EA%B8%88-%EC%BD%94%EB%94%A9-%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC-%EB%B3%B4%EC%95%88-%EA%B8%B0%EC%88%A0-%EB%B3%B4%EC%95%88-%EB%B3%B4%EC%95%88.jpg?b=1&s=170667a&w=0&k=20&c=eTOEiPyP7eyIItaEsTrv6Hx2zQfl0-DLrygrPl3ifmo="
                     class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">3P 서비스</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                      additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">지능형 인적자원관리 솔루션</h5>
+                    <p class="card-text">QR코드, IoT 장비를 활용한 원스탑 간편 출입관리를 지원하며 체온, 심박수, 알콜농도 등 ICT 기술을 활용한 데이터 분석 스케줄링을 지원합니다.
+
+                    </p>
                   </div>
                 </div>
               </div>
@@ -12780,9 +12779,10 @@
                     src="https://media.istockphoto.com/id/1400359666/ko/%EC%82%AC%EC%A7%84/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC-%EB%B3%B4%EC%95%88-%EB%B3%B4%EC%95%88-%EB%B3%B4%EC%95%88-%EC%8B%9C%EC%8A%A4%ED%85%9C-%EA%B8%B0%EC%88%A0-%EA%B8%B0%EC%88%A0-%EC%95%88%EC%A0%84-%EB%B9%85-%EB%8D%B0%EC%9D%B4%ED%84%B0-%EC%95%94%ED%98%B8%ED%99%94-%EB%94%94%EC%A7%80%ED%84%B8-%EC%83%9D%EC%84%B1-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EB%B3%B4%ED%98%B8-%EA%B0%9C%EC%9D%B8-%EC%A0%95%EB%B3%B4-%EB%B3%B4%ED%98%B8-%EB%B8%94%EB%A1%9D-%EC%B2%B4%EC%9D%B8-%EC%BB%B4%ED%93%A8%ED%84%B0-%EC%97%B0%EA%B2%B0-%EC%9E%A0%EA%B8%88-%EC%BD%94%EB%94%A9-%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC-%EB%B3%B4%EC%95%88-%EA%B8%B0%EC%88%A0-%EB%B3%B4%EC%95%88-%EB%B3%B4%EC%95%88.jpg?b=1&s=170667a&w=0&k=20&c=eTOEiPyP7eyIItaEsTrv6Hx2zQfl0-DLrygrPl3ifmo="
                     class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">3P 서비스</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                      additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">스마트 콘텐츠통합관제 솔루션</h5>
+                    <p class="card-text">Web 3.0기반 전 디스플레이 콘텐츠의 중앙 통합관제와 영상, 이미지, 스케줄 등 다양한 콘텐츠의 스트리밍을 지원합니다.
+
+                      </p>
                   </div>
                 </div>
               </div>
