--- a/index.html
+++ b/index.html
@@ -2240,6 +2240,7 @@
       border-color: #373b3e;
     }
 
+    
     .table-responsive {
       overflow-x: auto;
       -webkit-overflow-scrolling: touch;
@@ -12763,7 +12764,7 @@
               <div class="col">
                 <div class="card h-100">
                   <img
-                    src="https://media.istockphoto.com/id/1400359666/ko/%EC%82%AC%EC%A7%84/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC-%EB%B3%B4%EC%95%88-%EB%B3%B4%EC%95%88-%EB%B3%B4%EC%95%88-%EC%8B%9C%EC%8A%A4%ED%85%9C-%EA%B8%B0%EC%88%A0-%EA%B8%B0%EC%88%A0-%EC%95%88%EC%A0%84-%EB%B9%85-%EB%8D%B0%EC%9D%B4%ED%84%B0-%EC%95%94%ED%98%B8%ED%99%94-%EB%94%94%EC%A7%80%ED%84%B8-%EC%83%9D%EC%84%B1-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EB%B3%B4%ED%98%B8-%EA%B0%9C%EC%9D%B8-%EC%A0%95%EB%B3%B4-%EB%B3%B4%ED%98%B8-%EB%B8%94%EB%A1%9D-%EC%B2%B4%EC%9D%B8-%EC%BB%B4%ED%93%A8%ED%84%B0-%EC%97%B0%EA%B2%B0-%EC%9E%A0%EA%B8%88-%EC%BD%94%EB%94%A9-%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC-%EB%B3%B4%EC%95%88-%EA%B8%B0%EC%88%A0-%EB%B3%B4%EC%95%88-%EB%B3%B4%EC%95%88.jpg?b=1&s=170667a&w=0&k=20&c=eTOEiPyP7eyIItaEsTrv6Hx2zQfl0-DLrygrPl3ifmo="
+                    src="https://www.industrynews.co.kr/news/photo/201902/29346_21865_4054.jpg"
                     class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">지능형 인적자원관리 솔루션</h5>
@@ -12776,7 +12777,7 @@
               <div class="col">
                 <div class="card h-100">
                   <img
-                    src="https://media.istockphoto.com/id/1400359666/ko/%EC%82%AC%EC%A7%84/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC-%EB%B3%B4%EC%95%88-%EB%B3%B4%EC%95%88-%EB%B3%B4%EC%95%88-%EC%8B%9C%EC%8A%A4%ED%85%9C-%EA%B8%B0%EC%88%A0-%EA%B8%B0%EC%88%A0-%EC%95%88%EC%A0%84-%EB%B9%85-%EB%8D%B0%EC%9D%B4%ED%84%B0-%EC%95%94%ED%98%B8%ED%99%94-%EB%94%94%EC%A7%80%ED%84%B8-%EC%83%9D%EC%84%B1-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EB%B3%B4%ED%98%B8-%EA%B0%9C%EC%9D%B8-%EC%A0%95%EB%B3%B4-%EB%B3%B4%ED%98%B8-%EB%B8%94%EB%A1%9D-%EC%B2%B4%EC%9D%B8-%EC%BB%B4%ED%93%A8%ED%84%B0-%EC%97%B0%EA%B2%B0-%EC%9E%A0%EA%B8%88-%EC%BD%94%EB%94%A9-%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC-%EB%B3%B4%EC%95%88-%EA%B8%B0%EC%88%A0-%EB%B3%B4%EC%95%88-%EB%B3%B4%EC%95%88.jpg?b=1&s=170667a&w=0&k=20&c=eTOEiPyP7eyIItaEsTrv6Hx2zQfl0-DLrygrPl3ifmo="
+                    src="https://cphoto.asiae.co.kr/listimglink/6/2022013122150428937_1643634904.png"
                     class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">스마트 콘텐츠통합관제 솔루션</h5>
