--- a/index.html
+++ b/index.html
@@ -12659,7 +12659,12 @@
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
     <div class="container px-5">
-      <a class="navbar-brand fw-bold" href="#page-top">J SOLUTION</a>
+      <!-- <a class="navbar-brand fw-bold" href="#page-top">J SOLUTION</a> -->
+
+      <div class="navbar-brand fw-bold" href="#page-top">
+        <img src="http://dgict.org/data/editor/2004/ca10521235d36714558861489fdad40c_1586502233_58.png" title="로고"/>
+      </div>
+      
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
