--- a/index.html
+++ b/index.html
@@ -2240,7 +2240,7 @@
       border-color: #373b3e;
     }
 
-    
+
     .table-responsive {
       overflow-x: auto;
       -webkit-overflow-scrolling: touch;
@@ -3039,6 +3039,10 @@
       margin-top: 0.25rem;
       font-size: 0.875em;
       color: #198754;
+    }
+
+    .container88{
+      width: 1270px; margin:0 auto;
     }
 
     .valid-tooltip {
@@ -12659,12 +12663,13 @@
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
     <div class="container px-5">
-      <!-- <a class="navbar-brand fw-bold" href="#page-top">J SOLUTION</a> -->
+      <a class="navbar-brand fw-bold" href="#page-top">J SOLUTION</a>
 
-      <div class="navbar-brand fw-bold" href="#page-top">
-        <img src="http://dgict.org/data/editor/2004/ca10521235d36714558861489fdad40c_1586502233_58.png" title="로고"/>
-      </div>
+      <!-- <div class = "container88">
+        <img src="http://dgict.org/data/editor/2004/ca10521235d36714558861489fdad40c_1586502233_58.png" title="로고" />
+      </div> -->
       
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
@@ -12768,12 +12773,12 @@
               </div>
               <div class="col">
                 <div class="card h-100">
-                  <img
-                    src="https://www.industrynews.co.kr/news/photo/201902/29346_21865_4054.jpg"
-                    class="card-img-top" alt="...">
+                  <img src="https://www.industrynews.co.kr/news/photo/201902/29346_21865_4054.jpg" class="card-img-top"
+                    alt="...">
                   <div class="card-body">
                     <h5 class="card-title">지능형 인적자원관리 솔루션</h5>
-                    <p class="card-text">QR코드, IoT 장비를 활용한 원스탑 간편 출입관리를 지원하며 체온, 심박수, 알콜농도 등 ICT 기술을 활용한 데이터 분석 스케줄링을 지원합니다.
+                    <p class="card-text">QR코드, IoT 장비를 활용한 원스탑 간편 출입관리를 지원하며 체온, 심박수, 알콜농도 등 ICT 기술을 활용한 데이터 분석 스케줄링을
+                      지원합니다.
 
                     </p>
                   </div>
@@ -12781,14 +12786,13 @@
               </div>
               <div class="col">
                 <div class="card h-100">
-                  <img
-                    src="https://cphoto.asiae.co.kr/listimglink/6/2022013122150428937_1643634904.png"
+                  <img src="https://cphoto.asiae.co.kr/listimglink/6/2022013122150428937_1643634904.png"
                     class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">스마트 콘텐츠통합관제 솔루션</h5>
                     <p class="card-text">Web 3.0기반 전 디스플레이 콘텐츠의 중앙 통합관제와 영상, 이미지, 스케줄 등 다양한 콘텐츠의 스트리밍을 지원합니다.
 
-                      </p>
+                    </p>
                   </div>
                 </div>
               </div>
