--- a/index.html
+++ b/index.html
@@ -12850,7 +12850,7 @@
         </div>
         <div class="col-lg-4 order-lg-0">
           <!-- Features section device mockup-->
-          <div class="features-device-mockup">
+          <!-- <div class="features-device-mockup">
             <svg class="circle" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
               <defs>
                 <linearGradient id="circleGradient" gradientTransform="rotate(45)">
@@ -12880,7 +12880,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> 
         </div>
       </div>
     </div>
